--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,17 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="container">
+  <section id="todoapp">
+      <header id="header">
+        <h1>Todo list</h1>
+      </header>
 
-{{outlet}}
+      {{outlet}}
+  </section>
+
+
+  <footer id="info">
+    <p>
+      Double-click to edit a todo
+    </p>
+  </footer>
+
+</div>
