--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -25,8 +25,8 @@ body {
 	line-height: 1.4em;
 	background: #eaeaea url('bg.png');
 	color: #4d4d4d;
-	width: 550px;
-	margin: 0 auto;
+	/*width: 550px;*/
+	/*margin: 0 auto;*/
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-ms-font-smoothing: antialiased;
@@ -151,6 +151,7 @@ body {
 
 label[for='toggle-all'] {
 	display: none;
+
 }
 
 #toggle-all {
@@ -177,12 +178,14 @@ label[for='toggle-all'] {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+
 }
 
 #todo-list li {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px dotted #ccc;
+
 }
 
 #todo-list li:last-child {
@@ -239,6 +242,7 @@ label[for='toggle-all'] {
 
 #todo-list li label {
 	word-break: break-word;
+	font-weight: 300;
 	padding: 15px;
 	margin-left: 45px;
 	display: block;
@@ -348,7 +352,7 @@ label[for='toggle-all'] {
 }
 
 #filters li a.selected {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 #clear-completed {
